@@ -6,6 +6,13 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.DisplayName;
 
+import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionException;
+import java.util.function.Function;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
+
 import static org.junit.jupiter.api.Assertions.*;
 
 @DisplayName("DataProcessor Tests")
@@ -22,297 +29,268 @@ class DataProcessorTest {
     void tearDown() {
         if (dataProcessor != null) {
             dataProcessor.shutdown();
+            dataProcessor = null;
         }
-        dataProcessor = null;
     }
 
     @Test
-    @DisplayName("Should instantiate DataProcessor successfully")
+    @DisplayName("Should create instance successfully")
     void testConstructor() {
         assertNotNull(dataProcessor);
     }
 
+    // processDataPipeline tests
+
     @Test
-    @DisplayName("processDataPipeline: basic transformation, sorting, grouping, and deduplication")
-    void testProcessDataPipeline_Basic() {
-        java.util.List<String> input = java.util.List.of("apple", "apricot", "banana", "blueberry", "avocado", "banana");
+    @DisplayName("processDataPipeline: returns empty map for null input")
+    void testProcessDataPipeline_NullInput() {
+        Map<String, List<Integer>> result = dataProcessor.<String, Integer>processDataPipeline(
+                null,
+                s -> true,
+                String::length,
+                len -> len % 2 == 0 ? "even" : "odd",
+                Comparator.naturalOrder()
+        );
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
+    }
 
-        java.util.Map<String, java.util.List<String>> result =
-                dataProcessor.<String, String>processDataPipeline(
-                        input,
-                        java.util.Objects::nonNull,
-                        String::toUpperCase,
-                        s -> s.substring(0, 1),
-                        java.util.Comparator.naturalOrder()
-                );
+    @Test
+    @DisplayName("processDataPipeline: returns empty map for empty input")
+    void testProcessDataPipeline_EmptyInput() {
+        Map<String, List<Integer>> result = dataProcessor.<String, Integer>processDataPipeline(
+                Collections.emptyList(),
+                s -> true,
+                String::length,
+                len -> len % 2 == 0 ? "even" : "odd",
+                Comparator.naturalOrder()
+        );
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
+    }
 
+    @Test
+    @DisplayName("processDataPipeline: filters, maps (with nulls), sorts, groups, distincts and limits")
+    void testProcessDataPipeline_BasicPipeline() {
+        List<String> data = Arrays.asList("apple", "banana", "pear", "kiwi", "apple", "NULL", "plum", "banana");
+
+        Predicate<String> filter = Objects::nonNull; // allow all non-null
+        Function<String, Integer> transformer = s -> "plum".equals(s) ? null : s.length(); // map "plum" to null
+        Function<Integer, String> grouper = len -> (len % 2 == 0) ? "even" : "odd";
+        Comparator<Integer> sorter = Comparator.naturalOrder();
+
+        Map<String, List<Integer>> result = dataProcessor.<String, Integer>processDataPipeline(
+                data, filter, transformer, grouper, sorter
+        );
+
+        // Expected after mapping (excluding null for "plum"): lengths [5,6,4,4,5,4,6]
+        // Sorted globally: [4,4,4,5,5,6,6]
+        // Groups with distinct and limit:
+        // even: [4,6], odd: [5]
         assertNotNull(result);
         assertEquals(2, result.size());
-
-        assertTrue(result.containsKey("A"));
-        assertTrue(result.containsKey("B"));
-
-        java.util.List<String> groupA = result.get("A");
-        java.util.List<String> groupB = result.get("B");
-
-        assertEquals(3, groupA.size(), "Expected 3 unique A-prefixed entries");
-        assertEquals(2, groupB.size(), "Expected 'BANANA' deduped with 'BLUEBERRY' remaining");
-
-        assertTrue(groupA.contains("APPLE"));
-        assertTrue(groupA.contains("APRICOT"));
-        assertTrue(groupA.contains("AVOCADO"));
-
-        assertTrue(groupB.contains("BANANA"));
-        assertTrue(groupB.contains("BLUEBERRY"));
+        assertTrue(result.containsKey("even"));
+        assertTrue(result.containsKey("odd"));
+        assertEquals(Arrays.asList(4, 6), result.get("even"));
+        assertEquals(Collections.singletonList(5), result.get("odd"));
     }
 
     @Test
-    @DisplayName("processDataPipeline: returns empty map for null or empty input")
-    void testProcessDataPipeline_EmptyAndNullInput() {
-        java.util.Map<String, java.util.List<String>> resultNull =
-                dataProcessor.<String, String>processDataPipeline(
-                        null,
-                        java.util.Objects::nonNull,
-                        String::toUpperCase,
-                        s -> s.substring(0, 1),
-                        java.util.Comparator.naturalOrder()
-                );
-        assertNotNull(resultNull);
-        assertTrue(resultNull.isEmpty());
-
-        java.util.Map<String, java.util.List<String>> resultEmpty =
-                dataProcessor.<String, String>processDataPipeline(
-                        java.util.Collections.emptyList(),
-                        java.util.Objects::nonNull,
-                        String::toUpperCase,
-                        s -> s.substring(0, 1),
-                        java.util.Comparator.naturalOrder()
-                );
-        assertNotNull(resultEmpty);
-        assertTrue(resultEmpty.isEmpty());
-    }
-
-    @Test
-    @DisplayName("processDataPipeline: enforces per-group limit of 100 after deduplication")
-    void testProcessDataPipeline_DeduplicationAndLimitPerGroup() {
-        java.util.List<String> data = new java.util.ArrayList<>();
+    @DisplayName("processDataPipeline: enforces per-group limit of 100 after distinct")
+    void testProcessDataPipeline_GroupLimit() {
+        // Create 150 integers, all grouped into the same group "all"
+        List<Integer> data = new ArrayList<>();
         for (int i = 0; i < 150; i++) {
-            data.add(String.format("a%03d", i));
-        }
-        // Add another group to ensure only 'a' group hits the limit
-        for (int i = 0; i < 10; i++) {
-            data.add(String.format("b%03d", i));
+            data.add(i);
         }
 
-        java.util.Map<String, java.util.List<String>> result =
-                dataProcessor.<String, String>processDataPipeline(
-                        data,
-                        java.util.Objects::nonNull,
-                        s -> s, // identity transformer
-                        s -> s.substring(0, 1),
-                        java.util.Comparator.naturalOrder()
-                );
-
-        assertTrue(result.containsKey("a"));
-        assertTrue(result.containsKey("b"));
-
-        java.util.List<String> groupA = result.get("a");
-        java.util.List<String> groupB = result.get("b");
-
-        assertEquals(100, groupA.size(), "Group 'a' should be limited to 100");
-        assertEquals(10, groupB.size(), "Group 'b' should contain all 10 unique entries");
-
-        assertTrue(groupA.contains("a000"));
-        assertFalse(groupA.contains("a149"), "Entries beyond first 100 (by sort order) should be excluded");
-        // Ensure distinct
-        long distinctCount = groupA.stream().distinct().count();
-        assertEquals(groupA.size(), distinctCount, "Group 'a' should be distinct after deduplication");
-    }
-
-    @Test
-    @DisplayName("processDataPipeline: filters out nulls produced by transformer")
-    void testProcessDataPipeline_FiltersTransformerNulls() {
-        java.util.List<String> data = java.util.List.of("keep", "nullify", "also");
-
-        java.util.Map<String, java.util.List<String>> result =
-                dataProcessor.<String, String>processDataPipeline(
-                        data,
-                        java.util.Objects::nonNull,
-                        s -> "nullify".equals(s) ? null : s.toUpperCase(),
-                        s -> s.substring(0, 1),
-                        java.util.Comparator.naturalOrder()
-                );
+        Map<String, List<Integer>> result = dataProcessor.<Integer, Integer>processDataPipeline(
+                data,
+                i -> true,
+                i -> i, // identity
+                i -> "all",
+                Comparator.naturalOrder()
+        );
 
         assertNotNull(result);
-        assertEquals(2, result.size(), "Only 'keep' and 'also' should remain after transformer nulls filtered out");
+        assertTrue(result.containsKey("all"));
+        List<Integer> list = result.get("all");
+        assertEquals(100, list.size());
+        // Since sorted asc, then distinct, then limit(100), expect 0..99
+        for (int i = 0; i < 100; i++) {
+            assertEquals(i, list.get(i));
+        }
+    }
 
-        assertTrue(result.containsKey("K"));
-        assertTrue(result.containsKey("A"));
-        assertEquals(1, result.get("K").size());
-        assertEquals(1, result.get("A").size());
-        assertTrue(result.get("K").contains("KEEP"));
-        assertTrue(result.get("A").contains("ALSO"));
+    // calculateStatistics tests
+
+    @Test
+    @DisplayName("calculateStatistics: throws on null input")
+    void testCalculateStatistics_NullInput_Throws() {
+        assertThrows(IllegalArgumentException.class, () -> dataProcessor.calculateStatistics(null));
     }
 
     @Test
-    @DisplayName("calculateStatistics: even count dataset yields correct mean, median, quartiles, stddev, no outliers")
-    void testCalculateStatistics_EvenCount() {
-        java.util.List<Double> values = java.util.List.of(1d, 2d, 3d, 4d, 5d, 6d, 7d, 8d);
+    @DisplayName("calculateStatistics: throws on empty input")
+    void testCalculateStatistics_EmptyInput_Throws() {
+        assertThrows(IllegalArgumentException.class, () -> dataProcessor.calculateStatistics(Collections.emptyList()));
+    }
 
+    @Test
+    @DisplayName("calculateStatistics: computes mean, median, quartiles, stddev (population) and outliers - even count")
+    void testCalculateStatistics_EvenCount() {
+        List<Double> values = Arrays.asList(1d, 2d, 3d, 4d, 5d, 6d, 7d, 8d);
         DataProcessor.StatisticalResult result = dataProcessor.calculateStatistics(values);
 
+        assertNotNull(result);
         assertEquals(4.5, result.getMean(), 1e-9);
         assertEquals(4.5, result.getMedian(), 1e-9);
+        // Percentile method: index = ceil(p/100 * n) - 1
+        // Q1 = 2, Q3 = 6 for 1..8
         assertEquals(2.0, result.getQ1(), 1e-9);
         assertEquals(6.0, result.getQ3(), 1e-9);
-
-        // Population variance for 1..8 is 5.25; stddev = sqrt(5.25)
-        double expectedStdDev = Math.sqrt(5.25);
-        assertEquals(expectedStdDev, result.getStandardDeviation(), 1e-12);
-
-        assertNotNull(result.getOutliers());
+        // Population std dev for 1..8 is sqrt(5.25) ≈ 2.291287847
+        assertEquals(2.291287847, result.getStandardDeviation(), 1e-6);
         assertTrue(result.getOutliers().isEmpty());
     }
 
     @Test
-    @DisplayName("calculateStatistics: odd count dataset yields correct stats")
-    void testCalculateStatistics_OddCount() {
-        java.util.List<Double> values = java.util.List.of(1d, 2d, 3d, 4d, 5d);
-
+    @DisplayName("calculateStatistics: detects outliers and computes stats correctly - with outlier present")
+    void testCalculateStatistics_WithOutlier() {
+        List<Double> values = Arrays.asList(1d, 2d, 2d, 3d, 100d);
         DataProcessor.StatisticalResult result = dataProcessor.calculateStatistics(values);
 
-        assertEquals(3.0, result.getMean(), 1e-9);
-        assertEquals(3.0, result.getMedian(), 1e-9);
+        assertNotNull(result);
+        assertEquals(21.6, result.getMean(), 1e-9);
+        assertEquals(2.0, result.getMedian(), 1e-9);
         assertEquals(2.0, result.getQ1(), 1e-9);
-        assertEquals(4.0, result.getQ3(), 1e-9);
-
-        double expectedStdDev = Math.sqrt(2.0); // population variance for 1..5 is 2
-        assertEquals(expectedStdDev, result.getStandardDeviation(), 1e-12);
+        assertEquals(3.0, result.getQ3(), 1e-9);
+        // Population std dev computed above ≈ 39.20285
+        assertEquals(39.20285, result.getStandardDeviation(), 1e-3);
+        assertEquals(Collections.singletonList(100d), result.getOutliers());
     }
 
     @Test
-    @DisplayName("calculateStatistics: detects outliers via IQR and computes stddev (population)")
-    void testCalculateStatistics_WithOutliers() {
-        java.util.List<Double> values = java.util.List.of(1d, 2d, 2d, 3d, 4d, 5d, 100d);
-
+    @DisplayName("calculateStatistics: single element has zero stddev and quartiles equal to value")
+    void testCalculateStatistics_SingleElement() {
+        List<Double> values = Collections.singletonList(42d);
         DataProcessor.StatisticalResult result = dataProcessor.calculateStatistics(values);
 
-        // Mean
-        double expectedMean = 117.0 / 7.0;
-        assertEquals(expectedMean, result.getMean(), 1e-12);
-
-        // Median and quartiles per implementation
-        assertEquals(3.0, result.getMedian(), 1e-12);
-        assertEquals(2.0, result.getQ1(), 1e-12);
-        assertEquals(5.0, result.getQ3(), 1e-12);
-
-        // Outliers: only 100
-        assertNotNull(result.getOutliers());
-        assertEquals(1, result.getOutliers().size());
-        assertEquals(100.0, result.getOutliers().get(0), 1e-12);
-
-        // Population standard deviation
-        double variance = 0.0;
-        for (double v : values) {
-            double d = v - expectedMean;
-            variance += d * d;
-        }
-        variance /= values.size();
-        double expectedStdDev = Math.sqrt(variance);
-
-        assertEquals(expectedStdDev, result.getStandardDeviation(), 1e-9);
-    }
-
-    @Test
-    @DisplayName("calculateStatistics: throws for null or empty list")
-    void testCalculateStatistics_NullOrEmpty_Throws() {
-        assertThrows(IllegalArgumentException.class, () -> dataProcessor.calculateStatistics(null));
-        assertThrows(IllegalArgumentException.class, () -> dataProcessor.calculateStatistics(java.util.Collections.emptyList()));
+        assertNotNull(result);
+        assertEquals(42.0, result.getMean(), 1e-9);
+        assertEquals(42.0, result.getMedian(), 1e-9);
+        assertEquals(42.0, result.getQ1(), 1e-9);
+        assertEquals(42.0, result.getQ3(), 1e-9);
+        assertEquals(0.0, result.getStandardDeviation(), 1e-9);
+        assertTrue(result.getOutliers().isEmpty());
     }
 
     @Test
     @DisplayName("StatisticalResult: outliers list is unmodifiable")
-    void testStatisticalResult_OutliersUnmodifiable() {
-        java.util.List<Double> values = java.util.List.of(1d, 2d, 3d, 4d, 100d);
+    void testStatisticalResult_OutliersImmutability() {
+        List<Double> values = Arrays.asList(1d, 2d, 2d, 3d, 100d);
         DataProcessor.StatisticalResult result = dataProcessor.calculateStatistics(values);
-        java.util.List<Double> outliers = result.getOutliers();
-
-        assertThrows(UnsupportedOperationException.class, () -> outliers.add(42.0));
+        List<Double> outliers = result.getOutliers();
+        assertThrows(UnsupportedOperationException.class, () -> outliers.add(200d));
     }
 
+    // processInParallel tests
+
     @Test
-    @DisplayName("processInParallel: processes all keys and aggregates results")
+    @DisplayName("processInParallel: processes keys successfully and returns map")
     void testProcessInParallel_Success() {
-        java.util.List<String> keys = java.util.List.of("a", "b", "c");
+        List<String> keys = Arrays.asList("a", "bb", "ccc");
+        Function<String, Integer> processor = String::length;
 
-        java.util.concurrent.CompletableFuture<java.util.Map<String, String>> future =
-                dataProcessor.processInParallel(keys, String::toUpperCase);
+        CompletableFuture<Map<String, Integer>> future =
+                dataProcessor.<Integer>processInParallel(keys, processor);
 
-        java.util.Map<String, String> result = future.join();
-
-        assertNotNull(result);
+        Map<String, Integer> result = future.join();
         assertEquals(3, result.size());
-        assertEquals("A", result.get("a"));
-        assertEquals("B", result.get("b"));
-        assertEquals("C", result.get("c"));
+        assertEquals(1, result.get("a"));
+        assertEquals(2, result.get("bb"));
+        assertEquals(3, result.get("ccc"));
     }
 
     @Test
-    @DisplayName("processInParallel: propagates processing failure as CompletionException on join")
-    void testProcessInParallel_ExceptionPropagates() {
-        java.util.List<String> keys = java.util.List.of("ok1", "bad", "ok2");
+    @DisplayName("processInParallel: duplicate keys result in single entry")
+    void testProcessInParallel_DuplicateKeys() {
+        List<String> keys = Arrays.asList("dup", "dup", "dup");
+        Function<String, Integer> processor = String::length;
 
-        java.util.concurrent.CompletableFuture<java.util.Map<String, String>> future =
-                dataProcessor.processInParallel(keys, key -> {
-                    if ("bad".equals(key)) {
-                        throw new IllegalStateException("boom");
-                    }
-                    return key.toUpperCase();
-                });
-
-        assertThrows(java.util.concurrent.CompletionException.class, future::join);
+        Map<String, Integer> result = dataProcessor.<Integer>processInParallel(keys, processor).join();
+        assertEquals(1, result.size());
+        assertEquals(Integer.valueOf(3), result.get("dup"));
     }
 
     @Test
-    @DisplayName("findShortestPaths: computes correct distances including unreachable nodes")
-    void testFindShortestPaths_BasicGraph() {
-        java.util.Map<String, java.util.Map<String, Integer>> graph = new java.util.HashMap<>();
+    @DisplayName("processInParallel: processor failure completes future exceptionally with wrapped message")
+    void testProcessInParallel_ProcessorThrows() {
+        List<String> keys = Arrays.asList("ok1", "err", "ok2");
+        Function<String, Integer> processor = k -> {
+            if ("err".equals(k)) {
+                throw new IllegalStateException("boom");
+            }
+            return k.length();
+        };
 
-        java.util.Map<String, Integer> aNeighbors = new java.util.HashMap<>();
-        aNeighbors.put("B", 1);
-        aNeighbors.put("C", 4);
-        graph.put("A", aNeighbors);
+        CompletableFuture<Map<String, Integer>> future =
+                dataProcessor.<Integer>processInParallel(keys, processor);
 
-        java.util.Map<String, Integer> bNeighbors = new java.util.HashMap<>();
-        bNeighbors.put("C", 2);
-        bNeighbors.put("D", 6);
-        graph.put("B", bNeighbors);
+        CompletionException ex = assertThrows(CompletionException.class, future::join);
+        assertNotNull(ex.getCause());
+        assertTrue(ex.getCause().getMessage().contains("Processing failed for key: err"));
+    }
 
-        java.util.Map<String, Integer> cNeighbors = new java.util.HashMap<>();
-        cNeighbors.put("D", 3);
-        graph.put("C", cNeighbors);
+    @Test
+    @DisplayName("processInParallel: after shutdown, new submissions fail")
+    void testProcessInParallel_AfterShutdownFails() {
+        dataProcessor.shutdown();
+        List<String> keys = Arrays.asList("a", "b");
+        Function<String, String> processor = k -> k.toUpperCase(Locale.ROOT);
 
-        graph.put("D", new java.util.HashMap<>());
-        graph.put("E", new java.util.HashMap<>()); // unreachable
+        CompletableFuture<Map<String, String>> future =
+                dataProcessor.<String>processInParallel(keys, processor);
 
-        java.util.Map<String, Integer> distances = dataProcessor.findShortestPaths(graph, "A");
+        assertThrows(CompletionException.class, future::join);
+    }
 
-        assertNotNull(distances);
-        assertEquals(5, distances.size());
+    // findShortestPaths tests
+
+    @Test
+    @DisplayName("findShortestPaths: computes shortest paths correctly on directed graph")
+    void testFindShortestPaths_ShortestPaths() {
+        Map<String, Map<String, Integer>> graph = new HashMap<>();
+        graph.put("A", new HashMap<>());
+        graph.put("B", new HashMap<>());
+        graph.put("C", new HashMap<>());
+        graph.put("D", new HashMap<>());
+
+        graph.get("A").put("B", 1);
+        graph.get("A").put("C", 4);
+        graph.get("B").put("C", 2);
+        graph.get("B").put("D", 5);
+        graph.get("C").put("D", 1);
+
+        Map<String, Integer> distances = dataProcessor.findShortestPaths(graph, "A");
+
         assertEquals(0, distances.get("A").intValue());
         assertEquals(1, distances.get("B").intValue());
-        assertEquals(3, distances.get("C").intValue()); // via A->B->C
-        assertEquals(6, distances.get("D").intValue()); // via A->B->C->D
-        assertEquals(Integer.MAX_VALUE, distances.get("E").intValue()); // unreachable
+        assertEquals(3, distances.get("C").intValue()); // A->B->C
+        assertEquals(4, distances.get("D").intValue()); // A->B->C->D
     }
 
     @Test
-    @DisplayName("findShortestPaths: throws for invalid inputs")
-    void testFindShortestPaths_InvalidInput_Throws() {
+    @DisplayName("findShortestPaths: throws for null graph")
+    void testFindShortestPaths_NullGraph_Throws() {
         assertThrows(IllegalArgumentException.class, () -> dataProcessor.findShortestPaths(null, "A"));
+    }
 
-        java.util.Map<String, java.util.Map<String, Integer>> graph = new java.util.HashMap<>();
-        graph.put("X", new java.util.HashMap<>());
+    @Test
+    @DisplayName("findShortestPaths: throws when start node missing")
+    void testFindShortestPaths_MissingStartNode_Throws() {
+        Map<String, Map<String, Integer>> graph = new HashMap<>();
+        graph.put("X", Collections.emptyMap());
         assertThrows(IllegalArgumentException.class, () -> dataProcessor.findShortestPaths(graph, "A"));
     }
 }
